Add validation parsing